<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitcoin.socialbanks.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/background_toolbar"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="10dp"
        android:weightSum="1">

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/login_activity_hint_user"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#fff"></View>

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/login_activity_hint_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#fff"></View>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_button_entrar"
                android:elevation="10dp"
                android:text="@string/login_activity_button_login"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/linearLayout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:text="@string/label_welcome"
                android:textColor="#fff"
                android:textSize="60dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_welcome_sub"
                android:textColor="#1c504e"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="#666"
            android:text="@string/login_activity_not_user"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/login_new_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_button_cadastrar"
            android:elevation="10dp"
            android:text="@string/login_activity_button_register"
            android:textColor="#fff"
            android:textStyle="bold" />


        <Button
            android:id="@+id/login_witch_facebook_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_button_cadastrar"
            android:elevation="10dp"
            android:text="@string/login_activity_button_fb_login"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
