<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitcoin.socialbanks.fragments.PrimaryAccessFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/background_toolbar"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="10dp"
        android:weightSum="1"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_primary_access"
                android:textColor="#fff"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_primary_access_sub"
                android:textColor="#1c504e"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:padding="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/primary_access_yes_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_cadastrar"
            android:elevation="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/fragment_primary_access_yes"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/primary_access_no_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_entrar"
            android:elevation="10dp"
            android:text="@string/fragment_primary_access_no"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_below="@+id/primary_access_yes_bt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

</RelativeLayout>
