<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.bitcoin.socialbanks.fragments.NewWordsFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/background_toolbar"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="10dp"
        android:weightSum="1"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_new_words"
                android:textColor="#fff"
                android:textSize="50dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_new_words_sub"
                android:textColor="#1c504e"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:layout_below="@+id/relativeLayout">
        <Button
            android:id="@+id/new_word_save_bt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button_cadastrar"
            android:elevation="10dp"
            android:text="@string/fragment_new_word_confirm_word"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:background="@drawable/background_new_words_textview"
            android:gravity="center"
            android:textSize="20dp"
            android:padding="20dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/new_word_seed_tv"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/new_word_save_bt"
            android:layout_alignEnd="@+id/new_word_save_bt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/warning_words"
            android:id="@+id/textView8"
            android:alpha=".7"
            android:layout_above="@+id/new_word_save_bt"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/new_word_seed_tv" />
    </RelativeLayout>

</RelativeLayout>
