<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitcoin.socialbanks.fragments.BuyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/buy_fragment_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/verde_mais_escuro"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buy_fragment_email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/fragment_buy_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_list_search_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="@string/fragment_buy_money_unit"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/verde_mais_escuro"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/buy_price_et"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/item_list_search_name_et"
                android:layout_toRightOf="@+id/item_list_search_name_et"
                android:background="@drawable/background_rescue_words_edittext"
                android:gravity="center_vertical"
                android:inputType="numberDecimal"

                android:padding="5dp"
                android:textColor="@color/verde_mais_claro"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:text="50.00" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/fragment_buy_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/buy_description_et"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:background="@drawable/background_rescue_words_edittext"
                android:editable="false"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buy_fragment_cancel_bt"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_cadastrar"
                    android:text="@string/fragment_buy_button_cancel"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buy_fragment_buy_bt"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button_cadastrar"
                    android:text="@string/fragment_buy_button_buy"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
